# enterprise_llm

./: .gitignore  README.md  pyproject.toml
docs/: spec.md
llm/: __init__.py  checkpoint_utils.py  data.py  model.py  optim.py  tokenizer.py  training.py
scripts/: _repo_bootstrap.py  eval_perplexity.py  generate.py  generate_sweep.py  inspect_checkpoint.py  reset_project_state.py  tokenize_corpus.py  train_lm.py  train_tokenizer.py  verify_tokenizer_matches_corpus.py
src/enterprise_llm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_model_and_training.py  test_tokenizer.py
