[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-llm"
version = "0.1.0"
description = "LLM-style LLM from scratch"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "numpy>=1.26,<2",
  "regex>=2024.0.0",
  "tqdm>=4.66",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
